@@ -65,9 +65,6 @@
 
 /* There is a unique nfsnode allocated for each active file.  An nfsnode is
  * 'named' by its file handle.
- *
- * NOTE: n_size, n_mtime, and n_ctime are duplicted withing n_attr.  We could
- * eliminate those fields and save some memory.
  */
 
 struct nfsnode
@@ -77,9 +74,8 @@ struct nfsnode
   uint8_t            n_fhsize;      /* Size in bytes of the file handle */
   uint8_t            n_flags;       /* Node flags */
   uint16_t           n_buflen;      /* Size of I/O buffer */
-  struct nfs_fattr   n_fattr;       /* nfs file attribute cache (network order) */
-  struct timespec    n_mtime;       /* Prev modify time (see NOTE) */
-  time_t             n_ctime;       /* Prev create time (see NOTE) */
+  struct timespec    n_mtime;       /* File modification time (see NOTE) */
+  time_t             n_ctime;       /* File creation time (see NOTE) */
   nfsfh_t            n_fhandle;     /* NFS File Handle */
   uint64_t           n_size;        /* Current size of file (see NOTE) */
 
